css/style.css
.candidate {
    margin-top: 10px;
    margin-bottom: 10px;
    height: 180px;
}

.candidate a {
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    padding: 20px;
    display: inline-block;
    width: 100%;
    height: 100%;
    transition: box-shadow 0.4s;
}

.candidate a:hover {
    box-shadow: inset 0px 0px 100px 0px rgba(0,0,0,0.75);
    text-decoration: none;
}

.candidate p {
    opacity: 0;
    color: #ffffff;
    font-size: 30px;
    transition: opacity 0.4s;
}

.candidate a:hover p {
    opacity: 1;
}

.question,
.result {
    margin-bottom: 50px;
}

.result .text,
.question .text {
    font-size: 26px;
}

.finalResult {
    font-size: 60px;
}

.slider.slider-horizontal {
    width: 100%;
    margin-bottom: 24px!important;
}

.slider .slider-handle {
    background-color: #000000;
    background-image: none;
}

.slider .tooltip.top {
    margin-top: -48px;
    margin-left: -12.5px!important;
    padding: 0;
}

.tooltip.top .tooltip-arrow {
    display: none;
}

.slider .tooltip-inner {
    background-image: url(../images/pfeilonly.png);
    background-repeat: no-repeat;
    background-position: center center;
    background-size: contain;
    width: 25px;
    height: 45px;
    border-radius: 0;
    padding: 3px 0px;
}

